<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    >

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/form_field_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_field_1"
            />

        <EditText
            android:id="@+id/form_field_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_field_2"
            />

        <EditText
            android:id="@+id/form_field_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_field_3"
            />

        <EditText
            android:id="@+id/form_field_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_field_4"
            />

        <EditText
            android:id="@+id/form_field_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_field_5"
            />

        <EditText
            android:id="@+id/form_field_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_field_6"
            />

        <EditText
            android:id="@+id/form_field_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_field_7"
            />

        <EditText
            android:id="@+id/form_field_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_field_8"
            />

        <EditText
            android:id="@+id/form_field_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_field_9"
            />

        <EditText
            android:id="@+id/form_field_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_field_10"
            />

        <EditText
            android:id="@+id/form_field_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_field_11"
            />

        <EditText
            android:id="@+id/form_field_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_field_12"
            />

        <EditText
            android:id="@+id/form_field_13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_field_13"
            />

        <EditText
            android:id="@+id/form_field_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_field_14"
            />

        <EditText
            android:id="@+id/form_field_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_field_15"
            />
        <EditText
            android:id="@+id/form_field_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:hint="@string/form_field_16"
            />

        <Button
            android:id="@+id/form_commit"
            android:text="@string/form_field_17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
